pthread two learn

--- a/c/thread/Makefile
+++ b/c/thread/Makefile
@@ -1,3 +1,11 @@
+thread_objs = main.o pthread_one.o pthread_two.o
 
-ALL:
-	gcc -pthread pthread_one.c -o pone
+main: $(thread_objs)
+	gcc -pthread -o main $(thread_objs)
+
+clean:
+	rm main $(thread_objs)
+
+
+
+
