--- a/java/smackclient/.classpath
+++ b/java/smackclient/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/smack-extensions"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/smack-tcp"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/smack-java7"/>
+	<classpathentry kind="lib" path="lib/fastjson-1.2.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
