--- a/web/vue/todos/package.json
+++ b/web/vue/todos/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "undefinedundefinedtodos",
+  "name": "todos",
   "description": "A Vue.js project",
   "author": "androidfoross@gmail.com",
   "private": true,
