--- a/web/node/express/learn/package.json
+++ b/web/node/express/learn/package.json
@@ -4,7 +4,8 @@
   "description": "learn express web framework",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha",
+    "cov": "./node_modules/.bin/istanbul cover _mocha"
   },
   "keywords": [
     "node",
@@ -19,5 +20,12 @@
     "express": "^4.14.0",
     "superagent": "^2.3.0",
     "utility": "^1.2.0"
+  },
+  "devDependencies": {
+    "benchmark": "^2.1.1",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.1.2",
+    "should": "^11.1.1",
+    "supertest": "^2.0.1"
   }
 }
